--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,10 @@ plugins {
     id 'java'
 }
 
+tasks.withType(JavaCompile) {
+    options.encoding = 'UTF-8'
+}
+
 group 'org.example'
 version '1.0-SNAPSHOT'
 
@@ -42,13 +46,12 @@ dependencies {
     implementation "org.springframework.boot:spring-boot-starter-actuator:3.3.5"
     implementation "org.springframework.boot:spring-boot-starter-data-jpa:3.3.5"
     implementation "org.springframework.boot:spring-boot-starter-security:3.3.5"
+    implementation 'org.springframework.boot:spring-boot-starter-validation:3.3.5'
 
 
 
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'
-    implementation 'io.springfox:springfox-swagger-ui:3.0.0'
-    implementation 'io.springfox:springfox-swagger2:3.0.0'
-    implementation 'io.springfox:springfox-bean-validators:3.0.0'
+    implementation 'io.swagger.core.v3:swagger-annotations:2.2.15'
     implementation 'net.bytebuddy:byte-buddy:1.14.15'
 
 
